[gd_scene load_steps=12 format=3 uid="uid://dlvvxp17d3u6g"]

[ext_resource type="Script" uid="uid://dijw0rib7myyn" path="res://Scripts/player.gd" id="1_rcu0a"]
[ext_resource type="Texture2D" uid="uid://d1l5p8o4aci03" path="res://Assets/Transparent/Tilemap/tilemap_packed.png" id="1_wnxct"]

[sub_resource type="AtlasTexture" id="AtlasTexture_rcu0a"]
atlas = ExtResource("1_wnxct")
region = Rect2(0, 56, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_5y3eo"]
atlas = ExtResource("1_wnxct")
region = Rect2(24, 56, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_bc0vw"]
atlas = ExtResource("1_wnxct")
region = Rect2(16, 56, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_yaga4"]
atlas = ExtResource("1_wnxct")
region = Rect2(8, 56, 8, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_5y3eo"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rcu0a")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5y3eo")
}],
"loop": true,
"name": &"jump_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bc0vw")
}],
"loop": true,
"name": &"jump_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yaga4")
}],
"loop": true,
"name": &"run",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bc0vw"]
size = Vector2(6, 7.75)

[sub_resource type="Animation" id="Animation_rcu0a"]
resource_name = "go_in_door"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 0.116629),
"update": 0,
"values": [0.0, 12.5664]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 0.116629),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.1, 0.1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:motion_mode")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_5y3eo"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:motion_mode")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bc0vw"]
_data = {
&"RESET": SubResource("Animation_5y3eo"),
&"go_in_door": SubResource("Animation_rcu0a")
}

[node name="Player" type="CharacterBody2D"]
z_index = 1
collision_mask = 33
script = ExtResource("1_rcu0a")
jump_amout = 1
health = 10

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
sprite_frames = SubResource("SpriteFrames_5y3eo")
animation = &"run"
autoplay = "idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.25)
shape = SubResource("RectangleShape2D_bc0vw")

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(3, 3)

[node name="Area2D" type="Area2D" parent="."]
position = Vector2(0, 0.5)
collision_mask = 30

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
visible = false
position = Vector2(0, -0.375)
shape = SubResource("RectangleShape2D_bc0vw")

[node name="HUD" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="HUD"]
layout_mode = 3
anchors_preset = 0
scale = Vector2(3, 3)
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="HBoxContainer" type="HBoxContainer" parent="HUD/Control"]
layout_mode = 1
offset_left = 5.0
offset_top = 5.0
offset_right = 61.0
offset_bottom = 13.0

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1

[node name="JumpTimeBuffer" type="Timer" parent="."]
wait_time = 0.05
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_bc0vw")
}

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
